[project]
name = "snac1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "snac",
    "torchaudio>=2.9.1",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
snac = { git = "https://github.com/thewh1teagle/snac", branch = "feature/src-layout-pyproject" }
